force-app/main/default/objects/ST_ManagementDashboard__c/fields/TotalThisYear__c.field-meta.xml
<CustomField>
    <fullName>TotalThisYear__c</fullName>
    <formula>IF( X3__c != &apos;3_達成率&apos;
, IF( FLOOR( TotalThisYear_Orig__c / ( 10^15 ) ) &gt; 0 , TEXT( FLOOR( TotalThisYear_Orig__c / ( 10^15 ) ) ) , &quot;&quot; )
+ IF( FLOOR( TotalThisYear_Orig__c / ( 10^15 ) ) &gt; 0 , &quot;,&quot; + LPAD( TEXT( FLOOR( TotalThisYear_Orig__c / ( 10^12 ) ) - FLOOR( TotalThisYear_Orig__c / ( 10^15 ) ) * ( 10^3  )) , 3 , &quot;0&quot; ) , IF( FLOOR( TotalThisYear_Orig__c / ( 10^12 ) ) &gt; 0 , TEXT( FLOOR( TotalThisYear_Orig__c / ( 10^12 ) ) - FLOOR( TotalThisYear_Orig__c / ( 10^15 ) ) * ( 10^3  )) , &quot;&quot; ) )
+ IF( FLOOR( TotalThisYear_Orig__c / ( 10^12 ) ) &gt; 0 , &quot;,&quot; + LPAD( TEXT( FLOOR( TotalThisYear_Orig__c / ( 10^9  ) ) - FLOOR( TotalThisYear_Orig__c / ( 10^12 ) ) * ( 10^3  )) , 3 , &quot;0&quot; ) , IF( FLOOR( TotalThisYear_Orig__c / ( 10^9  ) ) &gt; 0 , TEXT( FLOOR( TotalThisYear_Orig__c / ( 10^9  ) ) - FLOOR( TotalThisYear_Orig__c / ( 10^12 ) ) * ( 10^3  )) , &quot;&quot; ) )
+ IF( FLOOR( TotalThisYear_Orig__c / ( 10^9  ) ) &gt; 0 , &quot;,&quot; + LPAD( TEXT( FLOOR( TotalThisYear_Orig__c / ( 10^6  ) ) - FLOOR( TotalThisYear_Orig__c / ( 10^9  ) ) * ( 10^3  )) , 3 , &quot;0&quot; ) , IF( FLOOR( TotalThisYear_Orig__c / ( 10^6  ) ) &gt; 0 , TEXT( FLOOR( TotalThisYear_Orig__c / ( 10^6  ) ) - FLOOR( TotalThisYear_Orig__c / ( 10^9  ) ) * ( 10^3  )) , &quot;&quot; ) )
+ IF( FLOOR( TotalThisYear_Orig__c / ( 10^6  ) ) &gt; 0 , &quot;,&quot; + LPAD( TEXT( FLOOR( TotalThisYear_Orig__c / ( 10^3  ) ) - FLOOR( TotalThisYear_Orig__c / ( 10^6  ) ) * ( 10^3  )) , 3 , &quot;0&quot; ) , IF( FLOOR( TotalThisYear_Orig__c / ( 10^3  ) ) &gt; 0 , TEXT( FLOOR( TotalThisYear_Orig__c / ( 10^3  ) ) - FLOOR( TotalThisYear_Orig__c / ( 10^6  ) ) * ( 10^3  )) , &quot;&quot; ) )
+ IF( FLOOR( TotalThisYear_Orig__c / ( 10^3  ) ) &gt; 0 , &quot;,&quot; + LPAD( TEXT( FLOOR( TotalThisYear_Orig__c / ( 10^0  ) ) - FLOOR( TotalThisYear_Orig__c / ( 10^3  ) ) * ( 10^3  )) , 3 , &quot;0&quot; ) , IF( FLOOR( TotalThisYear_Orig__c / ( 10^0  ) ) &gt; 0 , TEXT( FLOOR( TotalThisYear_Orig__c / ( 10^0  ) ) - FLOOR( TotalThisYear_Orig__c / ( 10^3  ) ) * ( 10^3  )) , &quot;0&quot; ) )
, TEXT(ROUND(TotalThisYear_Orig__c,4) * 100) &amp; &apos;%&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>通期累計</label>
    <type>Text</type>
</CustomField>