force-app/main/default/objects/ST_ManagementDashboard__c/fields/TotalThisYear_Orig__c.field-meta.xml
<CustomField>
    <fullName>TotalThisYear_Orig__c</fullName>
    <label>通期累計_元値</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>