force-app/main/default/objects/ST_ManagementDashboard__c/fields/X1__c.field-meta.xml
<CustomField>
    <fullName>X1__c</fullName>
    <label>区分1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>