force-app/main/default/objects/ST_ManagementDashboard__c/fields/X2__c.field-meta.xml
<CustomField>
    <fullName>X2__c</fullName>
    <label>区分2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>