force-app/main/default/objects/ST_ManagementDashboard__c/fields/X3__c.field-meta.xml
<CustomField>
    <fullName>X3__c</fullName>
    <label>区分3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>